# tensorflowlite_cpp_detect_demo

./: CMakeLists.txt  README.md  main.cpp
include/opencv2/: opencv.hpp
